--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd-mobile": "^1.6.7",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.1",
     "react-native-swiper": "^1.5.11",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "babel-jest": "21.0.0",
+    "babel-plugin-import": "^1.4.0",
     "babel-preset-react-native": "3.0.2",
     "jest": "21.0.1",
     "react-test-renderer": "16.0.0-alpha.12"
